<resources>
    <string name="app_name">GeoBird</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">login</string>
    <string name="title_password">password</string>
    <string name="title_go_register">Go register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="incorrect_login_data">Nieprawidłowe dane logowania</string>
    <string name="logout">wyloguj</string>
    <string name="qr_scan">scan qr</string>
    <string name="incorrect_qr_code">incorrect QR code</string>
    <string name="take_target">Zabierz cel</string>
    <string name="qr_scan_info">Scan QR to find target</string>
    <string name="qr_code_added_target">added target</string>
    <string name="qr_code_exists_target">target exists</string>
    <string name="error">something goes wrong</string>
    <string name="incorect_password">One of the passwords is incorrect</string>
    <string name="mail_is_empty">Empty mail</string>
    <string name="mail_incorrect">Sorry, your email is incorrect</string>
    <string name="register_failed">Register failed</string>
    <string name="register_successful">Successful registration</string>
    <string name="title_email">email</string>
    <string name="password_not_same">passwords not same</string>
    <string name="title_activity_register">register</string>
    <string name="title_register">register</string>
    <string name="login_is_empty">login is empty</string>
    <string name="cannot_register_data">cannot register data</string>
    <string name="password_empty">password is empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_map">map</string>
    <string name="title_gallery">Galeria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="target_preview">target preview</string>
    <string name="add_target">add target</string>
    <string name="delete_target">delete target</string>
    <string name="code">code</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="description">description</string>
    <string name="image">image</string>
    <string name="points">points</string>
    <string name="name">name</string>
    <string name="edit_target">edit target</string>
    <string name="update_target">updated target</string>
    <string name="edit_user">Edit User</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>