<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        class="com.example.geobirdclient.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_gallery"
            app:destination="@id/navigation_gallery" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        class="com.example.geobirdclient.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.geobirdclient.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />
  <!--  <fragment
        android:id="@+id/navigation_target_preview"
        class="com.example.geobirdclient.ui.gallery.GalleryFragment"
        android:label="@string/target_preview"
        tools:layout="@layout/fragment_gallery"/> -->
    <fragment
        android:id="@+id/navigation_notifications"
        class="com.example.geobirdclient.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_qr_scan"
        class="com.example.geobirdclient.ui.qr.QrScanFragment"
        android:label="@string/qr_scan"
        tools:layout="@layout/fragment_qr_scan" />
</navigation>